# equalx-atomic

./: .gitignore  Cargo.toml  README.md
.devin/: wiki.json
crates/adaptor-clsag/: Cargo.toml  README.md
crates/adaptor-clsag/examples/: finalize_tx.rs  gen_roundtrip.rs
crates/adaptor-clsag/src/: encoding.rs  error.rs  finalsig_region.rs  index.rs  lib.rs  presig_region.rs  tau.rs  transcript.rs  wire.rs
crates/adaptor-clsag/tests/: designated_index.rs  extract.rs  finalize_tx.rs  presig_into_tx.rs  transcript_binding.rs  validation.rs  vector_roundtrip.rs  wire.rs  wire_negative.rs
crates/adaptor-clsag/tests/common/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: atomicdesk.rs  common.rs  mod.rs  refund.rs  settle.rs
crates/cli/tests/: atomicdesk.rs  atomicdesk_dry.rs  cli_runs.rs  refund.rs  settle.rs
crates/equalx-sdk/: Cargo.toml  README.md
crates/equalx-sdk/src/: adaptor.rs  automation.rs  chain.rs  error.rs  escrow.rs  key_management.rs  key_registry.rs  lib.rs  refund.rs  settlement.rs  transport.rs  tx_hash.rs
crates/equalx-sdk/src/contracts/: atomic_desk.rs  auction_house.rs  common.rs  curves.rs  desk_vault.rs  mailbox.rs  mod.rs  router.rs  settlement_escrow.rs
crates/ffi-c/: Cargo.toml  build.rs
crates/ffi-c/src/: lib.rs
crates/ffi-wasm/: Cargo.toml  README.md
crates/ffi-wasm/src/: lib.rs
crates/ffi-wasm/tests/: basic.rs
crates/monero-rpc/: Cargo.toml
crates/monero-rpc/src/: lib.rs
crates/monero-rpc/tests/fixtures/: get_block.json  get_block_header_by_height.json  get_block_headers_range.json  get_fee_estimate.json  get_height.json  get_outs.json  get_transactions.json
crates/monero-wallet-core/: Cargo.toml  README.md
crates/monero-wallet-core/examples/: scan_demo.rs
crates/monero-wallet-core/src/: config.rs  decoys.rs  fees.rs  lib.rs  model.rs  plan.rs  scanner.rs  spendable.rs  storage.rs
crates/monero-wallet-core/tests/: decoy.rs  wallet_core.rs
crates/presig-envelope/: Cargo.toml
crates/presig-envelope/src/: lib.rs
crates/presig-envelope/tests/: vectors.rs
crates/tx_builder/: Cargo.toml
crates/tx_builder/src/: clsag.rs  convert.rs  ecdh.rs  lib.rs  serial.rs  wallet.rs
crates/tx_builder/tests/: balance.rs  bulletproof.rs  message_hash.rs
crates/watcher/: Cargo.toml
crates/watcher/examples/: monero.rs
crates/watcher/src/: evm.rs  lib.rs  monero.rs
docs/: ATOMIC-SWAP-LIFECYCLE.md  ATOMICDESKS-DESIGN.md  CLSAG-ADAPTOR-SPEC.md  MAILBOX-DESIGN.md
evm/contracts/test/: MailboxHarness.sol
flutter/ffi/: README.md  analysis_options.yaml  pubspec.yaml
flutter/ffi/assets/include/: eswp.h
flutter/ffi/lib/: equalx_ffi.dart
flutter/ffi/lib/src/: equalx_api.dart  equalx_bindings.dart  equalx_library.dart  types.dart
flutter/ffi/test/: equalx_ffi_test.dart
script/: run_atomic_local.sh
tools/build_swap_tx/: Cargo.toml  README.md
tools/build_swap_tx/src/: main.rs
tools/build_swap_tx/tests/: deterministic.rs
tools/export_tx/: Cargo.toml
tools/export_tx/src/: main.rs
tools/send_tx/: Cargo.toml
tools/send_tx/src/: main.rs
vectors/build_swap_tx/: decoys.json  owned_outputs.json
vectors/clsag/: noncanonical.json  roundtrip.json
vectors/fcmp/: bad_row_map.json
vectors/settlement/: settle_local_fixture.json
vectors/tx_builder/: production_clsag_tx_hex.txt
