[package]
name = "monero-rpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Minimal blocking client for monerod public RPC (get_info, get_height, get_transactions, sendrawtransaction)."

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
url = "2.5"
base64 = "0.22"

[dev-dependencies]
httpmock = "0.6"
