[package]
name = "monero-wallet-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Lightweight XMR wallet core for swap planning (EqualX)."

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
blake2 = "0.10"
rand_core = "0.6"
rand = { version = "0.8", features = ["std"] }
parking_lot = "0.12"
bincode = "1.3"
# Required by scanner.rs for key math and zeroization
curve25519-dalek = { version = "4.1", features = ["alloc"] }
zeroize = "1"
# blocking RPC client in-repo
monero-rpc = { path = "../monero-rpc" }
# monero-oxide for parsing/derivations
monero-oxide = { git = "https://github.com/monero-oxide/monero-oxide", default-features = false }

[dev-dependencies]
httpmock = "0.6"
