[package]
name = "presig-envelope"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["EqualX"]

[dependencies]
k256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12"
sha2 = "0.10"
sha3 = "0.10"
chacha20poly1305 = "0.10"
rand_core = "0.6"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"
