[package]
name = "watcher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
hex = "0.4"
adaptor-clsag = { path = "../adaptor-clsag" }
monero-rpc = { path = "../monero-rpc" }
tx_builder = { path = "../tx_builder" }
monero-oxide = { git = "https://github.com/monero-oxide/monero-oxide.git", rev = "7c288b058ae7f1e3d36600a2af11b3176102bcfc", default-features = false }
alloy-primitives = "0.8"
alloy-sol-types = "0.8"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand_chacha = "0.3"
curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc", "rand_core", "group"] }
